--- a/hihihihiihihhiihih.html
+++ b/hihihihiihihhiihih.html
@@ -116,8 +116,11 @@
       </div>
     </a>
     <nav class="nav" aria-label="Primary">
-      <a href="#">Trang chủ</a>
-      <a href="#">Liên hệ : 0985438594</a>
+      <a href="">Trang chủ</a>
+      <a href="phukie.html">Phụ Kiện</a>
+      <a href="giay.html">Giày </a>
+      <a href="lienhe.html">Liên hệ</a>
+      
     </nav>
   </header>
 
