--- a/giay.html
+++ b/giay.html
@@ -102,7 +102,7 @@
       <!-- 1 -->
       <div class="card">
         <div class="imgwrap">
-          <img src="giay1.jpg" alt="Giày thể thao LV Trainer">
+          <img src="louis-vuitton-lv-trainer-sneaker--BO9U7PMI20_PM1_Cropped worn view.webp" alt="Giày thể thao LV Trainer">
         </div>
         <div class="info">
           <div class="title">Giày LV Trainer Trắng Xanh</div>
@@ -114,7 +114,7 @@
       <!-- 2 -->
       <div class="card">
         <div class="imgwrap">
-          <img src="giay2.jpg" alt="Giày Gucci Ace">
+          <img src="for_love_kim_tuy_n_3.jpg" alt="Giày Gucci Ace">
         </div>
         <div class="info">
           <div class="title">Gucci Ace Sneaker Logo Web</div>
@@ -126,7 +126,7 @@
       <!-- 3 -->
       <div class="card">
         <div class="imgwrap">
-          <img src="giay3.jpg" alt="Giày Dior B23 High-top">
+          <img src="giay-dior-b23-high-top-multicolor-oblique-like-auth-10.jpg" alt="Giày Dior B23 High-top">
         </div>
         <div class="info">
           <div class="title">Dior B23 High-Top Canvas</div>
@@ -138,7 +138,7 @@
       <!-- 4 -->
       <div class="card">
         <div class="imgwrap">
-          <img src="giay4.jpg" alt="Giày loafers Hermes">
+          <img src="giay-luoi-nam-hermes-loafer-paris-chevre-black-mau-den-648986d15fe3a-14062023162225.webp" alt="Giày loafers Hermes">
         </div>
         <div class="info">
           <div class="title">Hermes Paris Loafers Leather</div>
@@ -150,7 +150,7 @@
       <!-- 5 -->
       <div class="card">
         <div class="imgwrap">
-          <img src="giay5.jpg" alt="Dép nam Prada">
+          <img src="dep-quai-ngang-prada-nam-10.jpg" alt="Dép nam Prada">
         </div>
         <div class="info">
           <div class="title">Prada Sandal Nam Rubber</div>
