--- a/phukie.html
+++ b/phukie.html
@@ -104,7 +104,7 @@
       <!-- 1. Ví da cá sấu -->
       <div class="card">
         <div class="imgwrap">
-          <img src="phukien1.jpg" alt="Ví da nam luxury">
+          <img src="vi-cam-tay-da-ca-sau-gs9825.webp" alt="Ví da nam luxury">
         </div>
         <div class="card-info">
           <div class="title">Ví Da Cá Sấu Nam Cao Cấp</div>
@@ -116,7 +116,7 @@
       <!-- 2. Thắt lưng nam -->
       <div class="card">
         <div class="imgwrap">
-          <img src="phukien2.jpg" alt="Thắt lưng nam luxury">
+          <img src="fb-that-lung-nam-da-bo-khoa-dong-nguyen-khoi-cartelo-ctl-kd1-1.webp" alt="Thắt lưng nam luxury">
         </div>
         <div class="card-info">
           <div class="title">Thắt Lưng Da Bò Khóa Vàng</div>
@@ -128,7 +128,7 @@
       <!-- 3. Kính mát nam -->
       <div class="card">
         <div class="imgwrap">
-          <img src="phukien3.jpg" alt="Kính mát nam luxury">
+          <img src="kinhxintaihanoilouisvuittonmillionairem96008wn.jpg" alt="Kính mát nam luxury">
         </div>
         <div class="card-info">
           <div class="title">Kính Mát Nam Dior Limited</div>
@@ -140,7 +140,7 @@
       <!-- 4. Vòng tay nam -->
       <div class="card">
         <div class="imgwrap">
-          <img src="phukien4.jpg" alt="Vòng tay nam luxury">
+          <img src="lac-tay-nam-vang-nguyen-khoi-dinh-kim-cuong-baguette-5-a55a712a-fd3c-481e-8cfa-82850588aadb.jpg" alt="Vòng tay nam luxury">
         </div>
         <div class="card-info">
           <div class="title">Vòng Tay Da Nam Hermes</div>
@@ -152,10 +152,10 @@
       <!-- 5. Khăn choàng nam -->
       <div class="card">
         <div class="imgwrap">
-          <img src="phukien5.jpg" alt="Khăn choàng nam luxury">
+          <img src="4-3.png" alt="Khăn choàng nam luxury">
         </div>
         <div class="card-info">
-          <div class="title">Khăn Choàng Cashmere Gucci</div>
+          <div class="title">Khăn Choàng MU cao cấp cho anh em ra khỏi hang</div>
           <div class="price">₫6.500.000</div>
           <button class="btn">Xem chi tiết</button>
         </div>
