--- a/lienhe.html
+++ b/lienhe.html
@@ -121,7 +121,7 @@
       <div class="card">
         <div class="icon">📘</div>
         <div class="label">Facebook</div>
-        <a href="https://www.facebook.com/xuanduc.ha.23" class="link" target="_blank">
+        <a href="Hà Xuân Đức" class="link" target="_blank">
           facebook.com/xuanduc.ha.23
         </a>
       </div>
