--- a/lienhe.html
+++ b/lienhe.html
@@ -98,8 +98,8 @@
       </div>
     </a>
     <nav class="nav">
-      <a href="index.html">Trang chủ</a>
-      <a href="phukien.html">Phụ kiện</a>
+      <a href="hihihihiihihhiihih.html">Trang chủ</a>
+      <a href="phukie.html">Phụ kiện</a>
       <a href="giay.html">Giày Dép</a>
       <a href="lienhe.html">Liên hệ</a>
     </nav>
@@ -121,7 +121,7 @@
       <div class="card">
         <div class="icon">📘</div>
         <div class="label">Facebook</div>
-        <a href="Hà Xuân Đức" class="link" target="_blank">
+        <a href="https://www.facebook.com/xuanduc.ha.23" class="link" target="_blank">
           facebook.com/xuanduc.ha.23
         </a>
       </div>
