--- a/giay.html
+++ b/giay.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <header>
-    <a class="brand" href="index.html">
+    <a class="brand" href="hihihihiihihhiihih.html">
       <div class="logo">S</div>
       <div>
         <div style="font-weight:800">Shop Anh Đức Luxury</div>
