--- a/giay.html
+++ b/giay.html
@@ -88,10 +88,10 @@
       </div>
     </a>
     <nav class="nav">
-      <a href="index.html">Trang chủ</a>
+      <a href="hihihihiihihhiihih.html">Trang chủ</a>
       <a href="phukien.html">Phụ kiện</a>
       <a href="giay.html">Giày Dép</a>
-      <a href="https://www.facebook.com/xuanduc.ha.23">Liên hệ</a>
+      <a href="lienhe.html">Liên hệ</a>
     </nav>
   </header>
 
