--- a/hihihihiihihhiihih.html
+++ b/hihihihiihihhiihih.html
@@ -116,7 +116,7 @@
       </div>
     </a>
     <nav class="nav" aria-label="Primary">
-      <a href="">Trang chủ</a>
+      <a href="hihihihiihihhiihih.html">Trang chủ</a>
       <a href="phukie.html">Phụ Kiện</a>
       <a href="giay.html">Giày </a>
       <a href="lienhe.html">Liên hệ</a>
