--- a/giay.html
+++ b/giay.html
@@ -89,7 +89,7 @@
     </a>
     <nav class="nav">
       <a href="hihihihiihihhiihih.html">Trang chủ</a>
-      <a href="phukien.html">Phụ kiện</a>
+      <a href="phukie.html">Phụ kiện</a>
       <a href="giay.html">Giày Dép</a>
       <a href="lienhe.html">Liên hệ</a>
     </nav>
