--- a/phukie.html
+++ b/phukie.html
@@ -91,7 +91,7 @@
     </a>
     <nav class="nav">
       <a href="hihihihiihihhiihih.html">Trang chủ</a>
-      <a href="phukien.html">Phụ kiện</a>
+      <a href="phukie.html">Phụ kiện</a>
       <a href="giay.html">Giày</a>
       <a href="lienhe.html">Liên hệ</a>
     </nav>
