--- a/hihihihiihihhiihih.html
+++ b/hihihihiihihhiihih.html
@@ -110,7 +110,7 @@
   <header class="header">
     <a class="brand" href="#">
       <div class="logo">
-        <a href="32da6193-f150-47b5-9cbe-fb72d24903f2.png"></a>
+        <img src="D:\CNTT 19-10\32da6193-f150-47b5-9cbe-fb72d24903f2.png" alt="">
       </div>
     
       <div>
