--- a/lienhe.html
+++ b/lienhe.html
@@ -121,8 +121,7 @@
       <div class="card">
         <div class="icon">📘</div>
         <div class="label">Facebook</div>
-        <a href="lienhe.html" class="link" target="_blank">
-          facebook.com/xuanduc.ha.23
+        <a href="https://www.facebook.com/xuanduc.ha.23" class="link" target="_blank">
         </a>
       </div>
 
