--- a/lienhe.html
+++ b/lienhe.html
@@ -120,8 +120,8 @@
       <!-- Facebook -->
       <div class="card">
         <div class="icon">📘</div>
-        <div class="label">Facebook</div>
-        <a href="https://www.facebook.com/xuanduc.ha.23" class="link" target="_blank">
+        <a href="https://www.facebook.com/xuanduc.ha.23" class="link" target="_blank">        <div class="label">Facebook</div>
+
         </a>
       </div>
 
