--- a/lienhe.html
+++ b/lienhe.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Liên hệ — Shop Anh Đức Luxury</title>
+   <link rel="shortcut icon" href="https://thanhchinh.edu.vn/img/bluemoon.ico" type="image/x-icon">
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     body{
